resources/rhobs/testing/observatorium-testing/observatorium-api-grpc-testing.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: observatorium-api
  name: observatorium-api-grpc
spec:
  host: observatorium-grpc.apps.rhobs-testing.qqzf.p1.openshiftapps.com
  port:
    targetPort: grpc-public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-observatorium-api
    weight: 100
  wildcardPolicy: None
