resources/rhobs/testing/observatorium-testing/observatorium-api-testing.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: observatorium-api
  name: observatorium-api
spec:
  host: observatorium.api.testing.openshift.com
  port:
    targetPort: public
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: observatorium-observatorium-api
    weight: 100
  wildcardPolicy: None
