resources/rhobs/testing/observatorium-testing/observatorium-jaeger-testing.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: jaeger
  name: observatorium-jaeger
spec:
  host: observatorium-jaeger.api.testing.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: jaeger-query
    weight: 100
  wildcardPolicy: None
